--- a/Makefile.cni
+++ b/Makefile.cni
@@ -1,6 +1,15 @@
 BUILD_DIR := $(abspath $(shell pwd)/build)
 LIB_PISTACHE := build/src/libpistache.a
 
+SDK_ROOT := $(abspath $(shell pwd)/../../otx-sdk-6.2.0)
+
+
+ifeq ($(PLATFORM), edge)
+        MARVELL_TOOLS_ROOT := $(SDK_ROOT)/marvell-tools-233.0
+        # compiler
+        CXX := $(MARVELL_TOOLS_ROOT)/bin/aarch64-marvell-linux-gnu-g++
+endif
+
 all :$(LIB_PISTACHE)
 
 git_submodules:
@@ -9,7 +18,7 @@ git_submodules:
 
 $(LIB_PISTACHE) : git_submodules
 	mkdir -p {build,prefix}
-	cd build && cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DPISTACHE_BUILD_EXAMPLES=false -DPISTACHE_BUILD_TESTS=false -DPISTACHE_BUILD_DOCS=false -DPISTACHE_USE_SSL=true -DCMAKE_INSTALL_PREFIX=$PWD/../prefix .. && make -j && make install
+	cd build && CXX=$(CXX) cmake3 -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DPISTACHE_BUILD_EXAMPLES=false -DPISTACHE_BUILD_TESTS=false -DPISTACHE_BUILD_DOCS=false -DPISTACHE_USE_SSL=true -DCMAKE_INSTALL_PREFIX=$PWD/../prefix .. && make -j && make install
 
 clean:
 	rm -rf build
