Add Makefile.cni and static library in meson.build

--- a/meson.build
+++ b/meson.build
@@ -10,6 +10,7 @@ project(
 	default_options: [
 		'cpp_std=c++17',
 		'buildtype=release',
+		'default_library=static',
 		'b_ndebug=if-release',
 		'b_lto=false',
 		'warning_level=3'
